fixing button on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
-button {
+.btn {
   cursor: 'pointer'
 }
 
